<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Backup Fab -->
    <string name="backup_fab_import">Import</string>
    <string name="backup_fab_export">Export</string>
    <string name="backup_fab_description1">Backup menu</string>
    <string name="backup_fab_description2">Export backup</string>
    <string name="backup_fab_description3">Import backup</string>

    <!-- Menu Labels -->
    <string name="menu_home_links">Links</string>
    <string name="menu_home_settings">Settings</string>

    <!-- Dialog Content -->
    <string name="dialog_about_button">Show Icon Credits</string>
    <string name="dialog_about_message">App Version: %1$s (%2$d)\nBuild Type: %3$s\nDevice: %4$s %5$s (%6$s)\nSoftware: Android %7$s (%8$d)</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_credits_button">Open Flaticon</string>
    <string name="dialog_credits_message">Information icon created by Freepik - Flaticon\n\nVerified icon created by Freepik - Flaticon\n\nEmpty box icon created by juicy_fish - Flaticon\n\nRight Arrow icon created by Roundicons - Flaticon\n\nGit icon created by Creatype - Flaticon\n\nSetting icon created by Freepik - Flaticon\n\nArt icon created by Freepik - Flaticon\n\nApp icon created by Freepik - Flaticon\n\n%s</string>
    <string name="dialog_credits_title">Icon Credits</string>
    <string name="dialog_restart_title">Restart required</string>
    <string name="dialog_restart_message">The change will be visible on next app start.\n\nDo you want to restart now?</string>
    <string name="dialog_restart_button2">Later</string>
    <string name="dialog_error_title">Encryption / Decryption Error</string>
    <string name="dialog_error_button2">Show error</string>
    <string name="dialog_input_button1">Save</string>
    <string name="dialog_input_button2">Cancel</string>
    <string name="dialog_name_error_length">Use between %1$d-%2$d characters</string>
    <string name="dialog_password_hint">Your Password</string>
    <string name="dialog_password_error">Invalid integrity, most likely wrong password</string>
    <string name="dialog_version_not_supported_title">Version not supported</string>
    <string name="dialog_version_not_supported_message">Unknown file version found.\nPlease update the app and try again.</string>
    <string name="dialog_links_title">Links</string>
    <string name="dialog_links_button">Visit</string>
    <string name="dialog_links_github">Repository on GitHub</string>
    <string name="dialog_links_matrix">Matrix chat room (questions, feedback, discussions)</string>
    <string name="dialog_links_donate">Feel free to support me with a small donation ❤️</string>

    <!--  BottomSheet Content -->
    <string name="bottomsheet_notice_button_text">Okay</string>

    <!-- Toasts -->
    <string name="toast_url_failed">"Opening URL failed, copied URL instead"</string>
    <string name="toast_stacktrace">Stacktrace copied</string>
    <string name="toast_github_url_missing">Missing GitHub repo url</string>

    <!-- Analysis -->
    <string name="analysis_run">Run test by clicking me</string>
    <string name="analysis_encryption_title">Encryption Speed (AES/GCM/NoPadding)</string>
    <string name="analysis_encryption_result">Encryption of dummy data took:\n%s</string>
    <string name="analysis_decryption_title">Decryption Speed (AES/GCM/NoPadding)</string>
    <string name="analysis_decryption_result">Decryption of dummy data took:\n%s</string>
    <string name="analysis_argon_hashing_title">Hashing Speed (Argon2id)</string>
    <string name="analysis_argon_hashing_result">Hashing of \"This is a test\" took:\n%s</string>
    <string name="analysis_xxhashing_title">Hashing Speed (XXHash3 128)</string>
    <string name="analysis_xxhashing_result">Hashing of \"This is a test\" took:\n%s</string>
    <string name="analysis_keystore_provider">Android KeyStore Provider</string>
    <string name="analysis_random_provider">Secure Random Provider</string>
    <string name="analysis_provider_info" translatable="false">%1$s %2$s (%3$s)</string>
    <string name="analysis_serial_uids_title">Serializable Version UIDs</string>

    <!-- Preferences -->
    <string name="preference_key_app_lock">app_lock</string>
    <string name="preference_item_app_lock">App Lock</string>
    <string name="preference_item_app_lock_summary">Require user authentication to unlock the app</string>
    <string name="preference_item_app_lock_note">Not supported by your phone</string>
    <string name="preference_key_adaptive_colors">adaptive_colors</string>
    <string name="preference_item_material_you">Material You (adaptive colors)</string>
    <string name="preference_item_material_you_summary">Use adaptive system colors over brand colors</string>
    <string name="preference_item_material_you_note">Not supported by your Android version</string>
    <string name="preference_key_app_icon">app_icon</string>
    <string name="preference_app_icon_description">Here you can customize the appearance of this app (app icon and label) on the home screen and the app drawer.\n\nTo be able to differentiate between multiple Backpack apps, an app-specific dual letter suffix is appended.</string>
    <string name="preference_app_icon_toast">App icon and label changed</string>
    <string name="preference_app_icon_dialog_title">Change app icon and label</string>
    <string name="preference_app_icon_dialog_message">The app will close itself to change it\'s appearance.</string>
    <string name="preference_app_icon_dialog_button">Restart</string>

    <!-- Biometry -->
    <string name="biometry_lock_title">Unlock Vault</string>
    <string name="biometry_lock_subtitle">Use your biometry, PIN or password.</string>
    <string name="auth_failed">Authentication failed, try again</string>
    <string name="auth_required">Authentication required</string>

    <!-- Uncaught exceptions -->
    <string name="exception_report">Report to app creator</string>
    <string name="exception_copy">Copy to clipboard</string>
</resources>
