<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_links"
        android:title="@string/menu_home_links"
        android:icon="@drawable/ic_link"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="2"
        android:title="@string/menu_home_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/_ic_information_scaled"
        android:orderInCategory="3"
        android:title="@string/dialog_about_title"
        app:showAsAction="ifRoom" />

</menu>
