<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2023 Cyb3rKo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/fab_bg_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blur_background"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/fab_layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|start"
        android:padding="@dimen/fab_margin"
        android:visibility="gone">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Widget.Material3.FloatingActionButton.Primary"
            android:id="@+id/fab_menu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/backup_fab_description2"
            android:src="@android:drawable/stat_sys_download" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/backup_fab_export"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fab_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|start"
        android:padding="@dimen/fab_margin"
        android:visibility="gone">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/backup_fab_description3"
            android:src="@android:drawable/stat_sys_upload" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/backup_fab_import"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fab_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:layout_gravity="bottom|start"
        android:padding="@dimen/fab_margin">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/top_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/backup_fab_description1"
            android:gravity="center_vertical"
            android:src="@android:drawable/stat_notify_sdcard" />

    </LinearLayout>

</FrameLayout>
